<resources>
    <string name="app_name">Collect</string>
    <string name="bienvenue">Bienvenue !</string>
    <string name="identifiez_vous">Identifiez-vous</string>
    <string name="facebook">Facebook</string>
    <string name="telephone">Telephone</string>
    <string name="valider">Valider</string>
    <string name="mon_compte">Mon compte</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="mot_de_passe">Mot de passe</string>
</resources>
