<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_bar"
        style="@style/LinearLayoutAcitonBar"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
    </LinearLayout>

    <TextView
        android:id="@+id/tv_mon_compte"
        style="@style/TextBigTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_bottom_tv_mon_compte"
        android:layout_marginTop="@dimen/margin_top_tv_bienvenue"
        android:text="@string/mon_compte" />

    <EditText
        android:id="@+id/et_email"
        style="@style/EditTextBorderBlue"
        android:layout_below="@+id/tv_mon_compte"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_bottom_btn_facebook"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/adresse_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        style="@style/EditTextBorderBlue"
        android:layout_below="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_bottom_tv_mon_compte"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_password"
        android:layout_centerInParent="false"
        android:text=">" />

</RelativeLayout>